--- a/src/Root.scss
+++ b/src/Root.scss
@@ -25,3 +25,19 @@ img.banner {
 .pointer {
   cursor: pointer;
 }
+.repo-item:hover {
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.1
+  ); /* Здесь можно настроить цвет затемнения */
+  cursor: pointer; /* Изменение курсора при наведении для указания на интерактивность */
+  transition: 0.3s;
+}
+
+.repository-view {
+  ul > li {
+    list-style: none;
+  }
+}
