--- a/src/Root.scss
+++ b/src/Root.scss
@@ -41,3 +41,14 @@ img.banner {
     list-style: none;
   }
 }
+
+.kind-element {
+  min-width: 70px;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px;
+  margin: 7px 10px 0 0;
+  border: 1px solid #0c6dfd;
+  color: #0c6dfd;
+  border-radius: 5px;
+}
