--- a/src/Root.scss
+++ b/src/Root.scss
@@ -38,7 +38,8 @@ img.banner {
   background-color: #0c6dfd !important;
   color: #ffffff !important;
   border-bottom: none !important;
-=======
+}
+
 .repo-item:hover {
   background-color: rgba(0, 0, 0, 0.1);
   cursor: pointer;
