--- a/src/Root.scss
+++ b/src/Root.scss
@@ -67,3 +67,8 @@ img.banner {
   color: #0c6dfd;
   border-radius: 5px;
 }
+
+.description-repository {
+  max-width: 600px;
+  word-wrap: break-word;
+}
