--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -1,10 +1,19 @@
 .repository-card {
+  padding: 0 15px 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   a {
     color: black !important;
     text-decoration: none;
   }
+}
+
+.card-link {
+  width: 100%;
+  padding: 20px 0 0 20px;
+}
+
+.link-to-github {
+  padding: 7px;
 }
