--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -1,6 +1,6 @@
 .repository-card {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   a {
     color: black !important;
     text-decoration: none;
@@ -18,7 +18,7 @@
 }
 
 .card-link {
-  width: 100%;
+  width: 85%;
   padding: 20px 10px 0 10px;
 }
 
@@ -26,6 +26,6 @@
   padding: 0 10px 0 10px;
 }
 .github-icon {
-  width: 100px;
+  width: 85px;
   padding-top: 7px;
 }
