--- a/src/components/Applications.scss
+++ b/src/components/Applications.scss
@@ -19,7 +19,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   min-height: 320px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -29,9 +28,11 @@
   border-radius: 15px;
   transition: 0.3s;
   cursor: pointer;
-  padding: 0 20px;
+  padding: 50px 20px 10px 20px;
   p {
+    max-width: 100%;
     margin: 0;
+    word-wrap: break-word;
   }
 }
 
