--- a/src/components/Applications.scss
+++ b/src/components/Applications.scss
@@ -20,7 +20,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   padding: 50px 15px 20px 15px;
   min-height: 350px;
   text-align: center;
@@ -62,4 +62,23 @@
     width: 50px;
     height: 50px;
   }
+}
+
+.count-users {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 8px;
+  width: 100%;
+  span {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    height: 40px;
+  }
+}
+
+.tooltip-count-users .tooltip-inner {
+  background-color: #9747ff;
+  color: #fff;
 }
