--- a/src/components/Applications.scss
+++ b/src/components/Applications.scss
@@ -11,7 +11,7 @@
 .app-logo-main {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
+  border-radius: 20px;
   margin-bottom: 20px;
 }
 
@@ -55,7 +55,7 @@
   justify-content: center;
   width: 100px;
   height: 100px;
-  border-radius: 50%;
+  border-radius: 20px;
   background-color: rgb(225, 225, 225);
   margin-bottom: 20px;
   img {
