--- a/src/components/App/RatingStatistics.scss
+++ b/src/components/App/RatingStatistics.scss
@@ -1,6 +1,10 @@
 .rating-container {
   display: flex;
   justify-content: center;
+  @media (max-width: 450px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .averate-rating {
