added write review button also when adding reviw I update review

--- a/src/components/Applications.scss
+++ b/src/components/Applications.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 25px;
+  margin-bottom: 30px;
   a {
     text-decoration: none;
     color: black;
