--- a/src/components/MainPageComponents/NewReviews.scss
+++ b/src/components/MainPageComponents/NewReviews.scss
@@ -15,3 +15,18 @@
     padding: 3px;
   }
 }
+
+.rating-content-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0;
+  p {
+    margin: 0;
+  }
+  @media (max-width: 450px) {
+    flex-direction: column;
+    p {
+      margin-bottom: 10px;
+    }
+  }
+}
