displayed the number of likes for the review

--- a/src/components/MainPageComponents/NewReviews.scss
+++ b/src/components/MainPageComponents/NewReviews.scss
@@ -16,6 +16,12 @@
   }
 }
 
+.count-likes {
+  color: #b22222;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
 .rating-content-container {
   display: flex;
   justify-content: space-between;
