created a page for reviews

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -4,15 +4,14 @@
 
 a {
   text-decoration: none;
+  color: black;
+  :hover {
+    color: black;
+  }
 }
 
 ul {
   list-style: none;
-}
-
-img.profile {
-  border: 1px solid #eee;
-  border-radius: 50%;
 }
 
 .highlight:hover {
