Added new pages: apps, repos, reviews. Also, updated the functionality of the command.

--- a/src/components/ReviewInfo.scss
+++ b/src/components/ReviewInfo.scss
@@ -3,12 +3,11 @@
     color: black;
   }
   font-size: 1.2rem;
-  padding: 20px 0;
   h3 {
     padding: 5px 0 0 0;
   }
   .app {
-    padding: 15px 0;
+    padding: 5px 0 10px 0;
     font-size: 1.5rem;
     img {
       width: 60px;
