--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -27,9 +27,15 @@
 }
 .github-icon {
   width: 85px;
-  padding-top: 7px;
 }
 
 .description {
   margin: 10px 0;
+}
+
+.zap-button-repository {
+  svg {
+    width: 27px;
+    height: 27px;
+  }
 }
