changed the styles of the zap button in the repository view

--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -39,3 +39,12 @@
     height: 27px;
   }
 }
+
+.repository-info-zap-button {
+  border: 1px solid #9747ff;
+  color: #9747ff;
+  border-radius: 10px;
+  padding: 18px 12px;
+  background: none;
+  cursor: default !important;
+}
