--- a/src/Root.scss
+++ b/src/Root.scss
@@ -31,6 +31,7 @@ img.banner {
 .repository-view {
   padding: 0 0 0 5px;
   ul {
+    width: 100%;
     margin: 0;
     padding: 0;
   }
@@ -39,7 +40,7 @@ img.banner {
   }
   .container-name {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     gap: 15px;
     padding: 8px 0;
     h2 {
