"Added a link to the repository on the application page

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -85,6 +85,15 @@ img.banner {
     }
   }
 }
+
+.repo-app-info {
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  .repository-card {
+    padding: 5px;
+  }
+}
+
 .AppInfo {
   @media (max-width: 450px) {
     .lud-16 {
