--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -10,6 +10,14 @@
     word-wrap: break-word;
     margin: 0;
   }
+  .actions {
+    display: flex;
+    @media (max-width: 450px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 7px;
+    }
+  }
 }
 
 .repository-card:hover {
