--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -1,6 +1,7 @@
 .repository-card {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  width: 100%;
   a {
     color: black !important;
     text-decoration: none;
@@ -27,7 +28,7 @@
 
 .card-link {
   width: 85%;
-  padding: 15px 10px 15px 10px;
+  padding: 15px 10px 0 0;
 }
 
 .link-to-github {
@@ -59,4 +60,27 @@
 
 .count-contribution {
   color: #0c6dfd;
+}
+
+.tags-container {
+  display: flex;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  margin-top: 5px;
+  padding-bottom: 10px;
+  .tag-button-repository-element {
+    white-space: nowrap;
+  }
+}
+
+.repository-link-actions-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.repository-card-container {
+  display: flex;
+  flex-direction: column;
 }
