I made the license, tag, programming language all in one line and removed the default scrollbar.

--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -66,11 +66,17 @@
   display: flex;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
-  margin-top: 5px;
-  padding-bottom: 10px;
   .tag-button-repository-element {
+    height: 40px;
     white-space: nowrap;
   }
+  .kind-element {
+    margin-right: 15px !important;
+  }
+}
+
+.tags-container::-webkit-scrollbar {
+  display: none;
 }
 
 .repository-link-actions-container {
