--- a/src/components/PublishedRepositories.scss
+++ b/src/components/PublishedRepositories.scss
@@ -66,21 +66,30 @@
   display: flex;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+  .kind-element {
+    margin: 0 !important;
+    height: 32px;
+    display: flex;
+    align-items: center;
+  }
   .tag-button-repository-element {
-    height: 40px;
+    display: flex;
+    align-items: center;
+    height: 32px;
     white-space: nowrap;
   }
+
   .programming-languages-container {
     margin-right: 10px;
+    gap: 7px;
+    display: flex;
   }
   .license {
     margin-right: 10px;
   }
   .tags {
     display: flex;
-    .kind-element {
-      margin: 0 !important;
-    }
+    gap: 5px;
   }
 }
 
