Made some style adjustments and fixed an error.

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -71,6 +71,9 @@ img.banner {
     margin-left: 6px;
   }
 }
+.description {
+  word-wrap: break-word;
+}
 
 .font-weight-bold {
   font-weight: 600;
