When clicking on add bounty if the user is not logged in, a modal for registration opens. Also, changed the a tag, now it sends naddr. Changed the location of the Open on GitHub, Add bounty buttons.

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -63,6 +63,9 @@ img.banner {
   max-width: 550px;
   word-wrap: break-word;
 }
+.description-issue {
+  word-wrap: break-word;
+}
 
 .limited-text {
   max-width: 600px;
@@ -71,6 +74,7 @@ img.banner {
     margin-left: 6px;
   }
 }
+
 .description {
   word-wrap: break-word;
 }
