--- a/src/components/Repository/PublishedRepositories.scss
+++ b/src/components/Repository/PublishedRepositories.scss
@@ -110,3 +110,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.bounty-item {
+  border-bottom: 1px solid #dee2e6;
+  padding: 4px 0;
+  p {
+    margin: 0;
+  }
+}
