improved some aspects on the releases page and in some places.

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -120,3 +120,8 @@ img.banner {
   background-color: rgba(0, 0, 0, 0.1);
   transition: 0.3s;
 }
+
+.multi-value-label-repo-form {
+  padding: 5px 5px 5px 10px;
+  font-size: 13px;
+}
