--- a/src/Root.scss
+++ b/src/Root.scss
@@ -125,3 +125,20 @@ img.banner {
   padding: 5px 5px 5px 10px;
   font-size: 13px;
 }
+
+.counts-app-on-home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img {
+    margin-bottom: 5px;
+  }
+  span {
+    font-size: 1rem;
+  }
+  svg {
+    cursor: default !important;
+    width: 35px;
+    height: 35px;
+  }
+}
