--- a/src/Root.scss
+++ b/src/Root.scss
@@ -153,3 +153,15 @@ img.banner {
 .more-button {
   cursor: pointer;
 }
+
+.app-added-of-the-day {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 7px 10px 3px rgba(34, 60, 80, 0.17);
+  -moz-box-shadow: 0px 7px 10px 3px rgba(34, 60, 80, 0.17);
+  box-shadow: 0px 7px 10px 3px rgba(34, 60, 80, 0.17);
+  border-radius: 15px;
+  padding: 5px;
+  .inner-block {
+    margin: 20px 20px;
+  }
+}
