--- a/src/components/MainPageComponents/AppAddedOfTheDay.scss
+++ b/src/components/MainPageComponents/AppAddedOfTheDay.scss
@@ -18,3 +18,25 @@
   }
   background-color: white;
 }
+
+.counts-app-on-home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img {
+    margin-bottom: 5px;
+  }
+  span {
+    font-size: 1rem;
+  }
+  svg {
+    cursor: default !important;
+    width: 35px;
+    height: 35px;
+  }
+  div {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+}
