Add toggle for single app view with fallback to full list

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -136,3 +136,11 @@ img.banner {
 .more-button {
   cursor: pointer;
 }
+
+.link-to-nostr-info {
+  color: #6d757d;
+}
+
+.link-to-nostr-info:hover {
+  color: #5a5c5e;
+}
