Fix event preview layout

--- a/src/components/EventApps.scss
+++ b/src/components/EventApps.scss
@@ -6,3 +6,10 @@
     width: 100%;
   }
 }
+
+.app-container {
+  @media (max-width: 450px) {
+    min-height: 500px;
+    align-items: center;
+  }
+}
