Rendered users for each application on EventApps.

--- a/src/elements/AppSelectItem.scss
+++ b/src/elements/AppSelectItem.scss
@@ -9,8 +9,5 @@
 .link {
   width: 100%;
   text-decoration: none;
-  color: black;
-  :hover {
-    color: black;
-  }
+  color: black !important;
 }
